--- a/Project1AlanAlqobaisi.ipynb
+++ b/Project1AlanAlqobaisi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiYRS1fRP9G7O5jpH/nLYi",
+      "authorship_tag": "ABX9TyMhV4Ls27uVOd8GHJCG2T2a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "g_0V73MTDA3y"
       },
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "OTjfnfjCDhkH"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
       "metadata": {
         "id": "G1NEAPGvDymw"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -207,28 +207,185 @@
         "    main()\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mR_QA7wxEPdL",
-        "outputId": "fa0d4ad5-ff10-4217-bdc4-054baae915d6"
+        "id": "mR_QA7wxEPdL"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a network file name (csv file):\n",
-            "watts_strogatz4000.csv\n",
-            "Enter the infection probability [0 .. 1] :\n",
-            "0.1\n",
-            "Enter infector node:\n",
-            "75\n",
-            "Infecting 4000 nodes, starting from 75:\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "from optparse import OptionParser\n",
+        "from csv import reader\n",
+        "from networkx import Graph\n",
+        "from random import choice, random\n",
+        "from csv import writer\n",
+        "\n",
+        "def write_to_csv_file(filename, rows):\n",
+        "    try:\n",
+        "        with open(filename, 'w', newline='') as outfile:\n",
+        "            # write to the file with outfile.write\n",
+        "            csvwriter = writer(outfile)\n",
+        "            for row in rows:\n",
+        "                csvwriter.writerow(row)\n",
+        "    except IOError as e:\n",
+        "        print(\"Unable to write \" + filename + \" due to Error: \" + e.strerror)\n",
+        "\n",
+        "\n",
+        "def simulate_inoculation(net: Graph, infector: str,\n",
+        "                         infection_probability: float, inoculator: str,\n",
+        "                         inoculation_probability: float):\n",
+        "\n",
+        "    infected = set(infector)\n",
+        "    inoculated = set(inoculator)\n",
+        "    rows_list = [(\"Round\", \"Infection Delta\", \"New Infections\",\n",
+        "                  \"Inoculation Delta\", \"Total infected\", \"Total inoculated\")]\n",
+        "    round_count = 0\n",
+        "    print('Infecting ' + str(len(net.nodes())) + ' nodes, starting from '\n",
+        "          + infector + ', and inoculating from ' + inoculator + ':')\n",
+        "    while len(infected) > 0:\n",
+        "        currently_infected = len(infected)\n",
+        "        currently_inoculated = len(inoculated)\n",
+        "        new_infections = 0\n",
+        "        if currently_infected > 0:\n",
+        "            for node in net.neighbors(choice(tuple(infected))):\n",
+        "                if node not in infected and node not in inoculated:\n",
+        "                    if random() <= infection_probability:\n",
+        "                        infected.add(node)\n",
+        "                        new_infections += 1\n",
+        "        for node in net.neighbors(choice(tuple(inoculated))):\n",
+        "            if node not in inoculated:\n",
+        "                if random() <= inoculation_probability:\n",
+        "                    inoculated.add(node)\n",
+        "                    if node in infected:\n",
+        "                        infected.remove(node)\n",
+        "        for node in inoculated:\n",
+        "            if node in infected:\n",
+        "                infected.remove(node)\n",
+        "        round_count += 1\n",
+        "        infection_delta = str(len(infected) - currently_infected)\n",
+        "        inoculation_delta = str(len(inoculated) - currently_inoculated)\n",
+        "        if not (infection_delta == '0' and inoculation_delta == '0'):\n",
+        "            rows_list.append((round_count, infection_delta, new_infections,\n",
+        "                              inoculation_delta, len(infected), len(inoculated)))\n",
+        "\n",
+        "    return tuple(rows_list)\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    network_file = input(\"Enter a network file name (csv file):\\n\")\n",
+        "    infection_probability_str =input(\"Enter the infection probability [0 .. 1] :\\n\")\n",
+        "    infector = input(\"Enter infector node:\\n\")\n",
+        "    inoculation_probability_str =input(\"Enter the inoculation probability [0 .. 1] :\\n\")\n",
+        "    inoculator = input(\"Enter inoculator node:\\n\")\n",
+        "\n",
+        "    try:\n",
+        "        # Convert probability into float\n",
+        "        infection_probability =float(infection_probability_str)\n",
+        "        inoculation_probability =float(inoculation_probability_str)\n",
+        "    except ValueError:\n",
+        "        print(\"Error: probability must be float between [0 .. 1]\")\n",
+        "        exit(0)\n",
+        "\n",
+        "    graph = Graph()\n",
+        "\n",
+        "    try:\n",
+        "        with open(network_file, 'r') as infile:\n",
+        "            csv = reader(infile)\n",
+        "            for row in csv:\n",
+        "                graph.add_edge(row[0], row[1])\n",
+        "\n",
+        "            if infector not in graph.nodes():\n",
+        "                print(\"the infector node must be in the set of nodes:\\n\" + str(graph.nodes()))\n",
+        "                exit(0)\n",
+        "            if inoculator not in graph.nodes():\n",
+        "                print(\"the inoculator node must be in the set of nodes:\\n\" + str(graph.nodes()))\n",
+        "                exit(0)\n",
+        "\n",
+        "            #  simulate network infection\n",
+        "            inoculation_report = simulate_inoculation(graph, infector, infection_probability,\n",
+        "                                                        inoculator, inoculation_probability)\n",
+        "\n",
+        "            # save inoculation_report report into csv file\n",
+        "            outfilename = \"Inoculation-\"+inoculation_probability_str + \"-\" + network_file\n",
+        "            write_to_csv_file(outfilename, tuple(inoculation_report))\n",
+        "\n",
+        "    except IOError as e:\n",
+        "        print(\"Unable to open \" + network_file + \" due to Error: \" + e.strerror)\n",
+        "        exit(0)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "id": "CPj3ZfwxOCbm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Existing function to simulate inoculation\n",
+        "# Add plotting after simulation\n",
+        "\n",
+        "def plot_inoculation_report(report):\n",
+        "    rounds = [row[0] for row in report[1:]]\n",
+        "    infection_delta = [int(row[1]) for row in report[1:]]\n",
+        "    new_infections = [int(row[2]) for row in report[1:]]\n",
+        "    inoculation_delta = [int(row[3]) for row in report[1:]]\n",
+        "    total_infected = [int(row[4]) for row in report[1:]]\n",
+        "    total_inoculated = [int(row[5]) for row in report[1:]]\n",
+        "\n",
+        "    plt.figure(figsize=(16, 8))\n",
+        "\n",
+        "    # Total infected over time\n",
+        "    plt.subplot(2, 2, 1)\n",
+        "    plt.plot(rounds, total_infected, marker='o', linestyle='-', label='Total Infected')\n",
+        "    plt.title('Total Infected Over Time')\n",
+        "    plt.xlabel('Round')\n",
+        "    plt.ylabel('Total Infected')\n",
+        "    plt.legend()\n",
+        "\n",
+        "    # Total inoculated over time\n",
+        "    plt.subplot(2, 2, 2)\n",
+        "    plt.plot(rounds, total_inoculated, marker='o', linestyle='-', color='green', label='Total Inoculated')\n",
+        "    plt.title('Total Inoculated Over Time')\n",
+        "    plt.xlabel('Round')\n",
+        "    plt.ylabel('Total Inoculated')\n",
+        "    plt.legend()\n",
+        "\n",
+        "    # New infections per round\n",
+        "    plt.subplot(2, 2, 3)\n",
+        "    plt.plot(rounds, new_infections, marker='o', linestyle='-', color='red', label='New Infections')\n",
+        "    plt.title('New Infections Per Round')\n",
+        "    plt.xlabel('Round')\n",
+        "    plt.ylabel('New Infections')\n",
+        "    plt.legend()\n",
+        "\n",
+        "    # New inoculations per round\n",
+        "    plt.subplot(2, 2, 4)\n",
+        "    plt.plot(rounds, inoculation_delta, marker='o', linestyle='-', color='blue', label='New Inoculations')\n",
+        "    plt.title('New Inoculations Per Round')\n",
+        "    plt.xlabel('Round')\n",
+        "    plt.ylabel('New Inoculations')\n",
+        "    plt.legend()\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "# After simulation, call the function\n",
+        "# plot_inoculation_report(inoculation_report)\n"
+      ],
+      "metadata": {
+        "id": "PYJmMJCyPitx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
